# D3DH-Client

./: .gitignore  .gitmodules  CMakeLists.txt  D3DH-Client.kdev4  README.md  conf2  config.ceta.yaml  config.ini  config.local.yaml  config.yaml
igor_build/: calibrate  calibrate_extrinsic
igor_build/ext/Phelsuma/: ColoredTexTriangle  LightingBoxes  LightingBoxesPhongScene  PointCloud3D  RotatingBox
include/: INIReader.h  frame_processors.h
include/calibration/: calibration_window.h
include/client/: Camera.h  rpc_package_manager.h  timeService.h
include/common/: type_definitions.h  utils.h
include/glad/: glad.h
include/server/: binary_data_player.h  camera_calibration.h  camera_calibration_loader.h  data_capture.h  frame_processors.h  frame_synhronization.h  frontend.h  pack_of_frames_as_binary_processor.h  pack_of_frames_frontend_processor.h  pack_of_frames_processor.h  pack_of_frames_to_disk_processor.h  point_cloud_factory.h
kin3d-1-calibration/: color_camera.yaml  extrinsic.yaml  ir_camera.yaml  pose.yaml
kin3d-2-calibration/: color_camera.yaml  extrinsic.yaml  ir_camera.yaml  pose.yaml
kin3d-3-calibration/: color_camera.yaml  extrinsic.yaml  ir_camera.yaml  pose.yaml
scripts/: group_frames.py
src/: Main.cpp  frame_processors.cpp
src/calibration/: calibrate.cpp  calibrate_extrinsic.cpp  calibration_window.cpp
src/client/: Camera.cpp  Main.cpp  rpc_package_manager.cpp  timeService.cpp
src/common/: glad.c  type_definitions.cpp  utils.cpp
src/server/: binary_data_player.cpp  camera_calibration_loader.cpp  data_capture.cpp  frame_processors.cpp  frontend.cpp  main.cpp  pack_of_frames_as_binary_processor.cpp  pack_of_frames_frontend_processor.cpp  pack_of_frames_to_disk_processor.cpp  point_cloud_factory.cpp
src/shaders/: point3d.fs  point3d.vs  preview.vs  preview_gray.fs  preview_rgb.fs
